# quark

./: .gitignore  .gitmodules  .gitreview  .testr.conf  .travis.yml  CONTRIBUTING.rst  DESIGN  DOCKER_README.md  Dockerfile  MANIFEST.in  README.md  README.rst  TODO  Vagrantfile  constraints.txt  distribute_setup.py  docker.apipaste.ini  docker.neutron.conf  docker.policy.json  docker_down.sh  docker_reload.sh  docker_up.sh  requirements.txt  run_tests.sh  setup.cfg  setup.py  test-requirements.txt  tox.ini  vagrant.neutron.conf
doc/: make.bat
doc/source/: INDEX.rst
docs/: Makefile  shared_ips.raml  shared_ips_nova.raml
docs/source/: conf.py
infrastructure/docker/debian6/: Dockerfile
infrastructure/docker/debian7/: Dockerfile
infrastructure/docker/debian8/: Dockerfile
infrastructure/docker/quark/: Dockerfile
quark/: __init__.py  allocation_pool.py  billing.py  environment.py  exceptions.py  gunicorn_server.py  ip_availability.py  ipam.py  network_strategy.py  nvplib.py  plugin.py  plugin_views.py  port_vlan_id.py  protocols.py  quota_driver.py  segment_allocations.py  tags.py  utils.py
quark/agent/: README.md  agent.py  redis_client.py  utils.py  version_control.py  xapi.py
quark/agent/tests/: test_redis.py  test_utils.py  test_version_control.py  test_xapi.py
quark/api/: auth.py
quark/api/extensions/: diagnostics.py  floatingip.py  ip_addresses.py  ip_allocations.py  ip_availability.py  ip_policies.py  jobs.py  mac_address_ranges.py  networks.py  networks_quark.py  ports_quark.py  routes.py  scalingip.py  security_group_rules.py  security_groups.py  segment_allocation_ranges.py  subnets_quark.py
quark/cache/: redis_base.py  security_groups_client.py
quark/db/: __init__.py  api.py  custom_types.py  ip_types.py  models.py  sqlalchemy_adapter.py
quark/db/alembic/: env.py
quark/db/migration/: alembic.ini  cli.py
quark/drivers/: base.py  floating_ip_registry.py  ironic_driver.py  nvp_driver.py  optimized_nvp_driver.py  registry.py  registry_base.py  security_groups.py  unicorn_driver.py  unmanaged.py
quark/plugin_extensions/: providernets.py
quark/plugin_modules/: floating_ips.py  ip_addresses.py  ip_policies.py  jobs.py  mac_address_ranges.py  networks.py  ports.py  router.py  routes.py  security_groups.py  segment_allocation_ranges.py  subnets.py
quark/security_groups/: redis_client.py  redis_sg_tool.py
quark/tests/: __init__.py  test_base.py  test_base_driver.py  test_billing.py  test_command_manager.py  test_db_api.py  test_db_custom_types.py  test_db_models.py  test_driver_registry.py  test_environment.py  test_ipam.py  test_ironic_driver.py  test_migrations.py  test_network_strategies.py  test_nvp_driver.py  test_optimized_nvp_driver.py  test_port_vlan_id.py  test_quark_plugin.py  test_tags.py  test_unmanaged_driver.py  test_utils.py
quark/tests/agent/: test_agent.py  test_xapi.py
quark/tests/cache/: test_redis_base.py  test_security_groups_client.py
quark/tests/functional/: base.py  test_driver_registry.py  test_faws.py  test_ip.py  test_ip_availability.py  test_ip_policies.py  test_ipam.py  test_plugin.py  test_ports.py
quark/tests/plugin_modules/: test_floating_ips.py  test_ip_addresses.py  test_ip_policies.py  test_mac_address_ranges.py  test_networks.py  test_ports.py  (+3 more)
quark/tools/: async_worker.py  billing.py  insert_provider_subnets.py  null_routes.py  redis_sg_tool.py
quark/worker_plugins/: base_worker.py  sample_worker.py  sg_update_worker.py
tools/: pip-requires  test-requires
(+82 files in other folders)
