[metadata]
name = quark
author = Ozone
author-email = jkoelker@rackspace.com
summary = A neutron plugin plugin
description-file = README.rst
license = Apache-2
home-page = http://github.com/jkoelker/quark
classifier =
    Development Status :: 4 - Beta
        Environment :: Console
        Environment :: OpenStack
        Intended Audience :: Developers
        Intended Audience :: Information Technology
        License :: OSI Approved :: Apache Software License
        Operating System :: OS Independent
        Programming Language :: Python

[entry_points]
console_scripts =
    quark-db-manage = quark.db.migration.alembic.cli:main
    gunicorn-neutron-server = quark.gunicorn_server:main
    quark-agent = quark.agent.agent:main
    ip_availability = quark.ip_availability:main
    redis_sg_tool = quark.tools.redis_sg_tool:main
